# Duet

./: common.py  datasets.py  draw_nfilter_curve.py  estimators.py  eval_model.py  generate_all_workload_gpu.py  generate_train_workload_gpu_npred.py  made.py  readme.md  requirements.txt  run_eval_npred.py  train_model.py  transformer.py  util.py
MySampler/: setup.py
MySampler/src/: CMakeLists.txt  MySampler.cpp  MySampler.h
